Updated base container for running application to resolve ssl handshake as cyper suite may not be available in other base image